<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_undo" android:title="@string/action_undo"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_clear" android:title="@string/action_clear"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_save" android:title="@string/action_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:orderInCategory="101"
        android:icon="@drawable/ic_action_social_share"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_color" android:title="@string/action_color"
        android:orderInCategory="102" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_image_color_lens"/>

    <item android:id="@+id/action_size" android:title="@string/action_size"
        android:orderInCategory="103" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_editor_format_size"/>

    <item android:id="@+id/action_alpha" android:title="@string/action_alpha"
        android:orderInCategory="104" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_image_transform"/>

</menu>
